Thu May  8 10:10:22 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h: sort function declarations
	* src/apps/tsql.c: use strdup to copy string
	* src/ctlib/ct.c src/dblib/rpc.c src/odbc/odbc_util.c:
	* src/odbc/sql2tds.c src/tds/Makefile.am src/tds/token.c:
	* src/tds/data.c(added):
	- add data.c and put some function here (from token.c)
	- added tds_set_param_type function

Wed May  7 23:58:33 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/apps/tsql.c default to CHARSET_ISO1

Wed May  7 23:08:12 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* acinclude.m4 Add comments for iconv testing
	* configure.in test for locale_charset
	* src/tds/util.c remove date from %L in tdsdump, added to tds_open	
	* src/ctlib/cs.c src/ctlib/ct.c src/dblib/dblib.c src/dblib/rpc.c
	* src/tds/convert.c src/tds/query.c src/tds/threadsafe.c 
	* src/tds/token.c
	- remove "inside" from most logging statements.  

Wed May  7 14:48:28 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* TODO src/odbc/unittests/moreandcount.c(added):
	- test for SQLMoreResults and SQLRowCount in batch (fail)
	* src/odbc/odbc.c: comments.

Wed May  7 11:57:15 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: reset current_statement after all rows fetched
	* src/tds/iconv.c: fixed login, reindented

Tue May  6 13:14:14 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4 configure.in: start test for iconv names

Tue May  6 11:53:11 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c: some small fixes

Mon May  5 23:41:22 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* TODO corrections
	* include/tds.h src/tds/iconv.c src/tds/mem.c
	- initialize three TDSICONVINFO structures for the socket

Mon May  5  7:45:26 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c: some fixes 

Sun May  4 19:51:34 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* include/sybdb.h include/tds.h support per-column iconv conversion